<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="welcome_to_the_grievances_society_of_bmsit"><![CDATA[Welcome to the Grievances SOCiety of BMSIT]]></string>
    <string name="my_profile">My Profile</string>
    <string name="feeling_unsafe">Feeling Unsafe?</string>
    <string name="security_alerts">Security alerts</string>
    <string name="log_out">Log Out</string>
    <string name="choose_a_department_for_your_petition">Choose a department for your petition:</string>
    <string name="administrative">Administrative</string>
    <string name="todo">TODO</string>
    <string name="academic">Academic</string>
    <string name="non_academic">Non-Academic</string>
    <string name="hostel_related">Hostel related</string>
    <string name="cleanliness_amp_hygiene"><![CDATA[Cleanliness & Hygiene]]></string>
    <string name="about_security_feature_security_alert_feature_of_the_gsoc_bms_app_allows_the_users_to_send_a_threat_alert_to_the_college_administration_and_fellow_students_along_with_the_notification_it_also_shares_the_live_location_of_the_individual_under_threat_this_feature_provides_security_to_all_students_in_and_out_of_the_college_campus">ABOUT SECURITY FEATURE : Security Alert feature of the GSoc-BMS app allows the users to send a \'threat alert\' to the college administration and fellow students. Along with the notification, it also shares the live location of the individual under threat. This feature provides security to all students in and out of the college campus!</string>
    <string name="send_alert">SEND ALERT!!</string>
    <string name="about_gsocbms">About GSocBMS-:</string>
    <string name="gsocbms_is_a_user_friendly_platform_for_students_to_interact_and_share_their_problems_with_the_management_committee_of_bms_institute_of_technology_and_management_students_can_check_real_time_status_of_any_petition_filed_regarding_any_academic_or_non_academic_issue_that_the_students_are_facing_it_provides_a_more_efficient_process_to_deal_with_our_day_to_day_problems_on_campus">GSocBMS is a user friendly platform for students to interact and share their problems with the management committee of BMS Institute of Technology and Management.Students can check real time status of any petition filed regarding any academic or non-academic issue that the students are facing. It provides a more efficient process to deal with our day to day problems on campus.</string>
    <string name="write_a_new_petition">Write a new Petition…</string>
    <string name="choose_your_department">Choose your department:</string>
    <string name="gsocbms">GSocBMS</string>
    <string name="admin_login">Admin Login</string>
    <string name="e_mail_id">E-mail Id:</string>
    <string name="enter_your_e_mail_id">Enter your e-mail id</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? SIGN UP</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_to_gsocbms">Welcome to GSocBMS</string>
    <string name="pending">pending</string>
    <string name="in_progress">in progress</string>
    <string name="resolved">resolved</string>
    <string name="set_current_status">Set Current Status</string>
    <string name="write_petition_here">Write Petition Here:</string>
    <string name="title_not_more_than_40_characters">Title..( not more than 40 characters)</string>
    <string name="type_here_approx_400_characters_allowed">Type here… (Approx 400 characters allowed)</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="todo1">TODO</string>
    <string name="todo2">TODO</string>
    <string name="admin_sign_up">Admin Sign-Up</string>
    <string name="name">Name:</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail_id1">E-mail Id:</string>
    <string name="xyz_bmsit_n">xyz@bmsit.n</string>
    <string name="signup">Sign Up</string>
    <string name="more_than_6_characters">More than 6 characters</string>
    <string name="xyz_bmsit_in">xyz@bmsit.in</string>
    <string name="eg_1by12ab001">eg-:1BY12AB001</string>
</resources>