<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WritePetition"
    android:background="#e6e6fa">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:background="#000000"
                app:title="GSocBMS"
                app:titleMarginStart="20dp"
                app:titleTextColor="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="5dp"
                android:text="@string/write_petition_here"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/petitionTitle"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="57dp"
                android:textSize="20sp"
                android:padding="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text_round"
                android:hint="@string/title_not_more_than_40_characters"
                android:maxLength="40"
                android:autofillHints=""
                 />


            <EditText
                android:id="@+id/petition"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:padding="8dp"
                android:layout_marginTop="25dp"
                android:background="@drawable/edit_text_round"
                android:gravity="top"
                android:hint="@string/type_here_approx_400_characters_allowed"
                android:textColor="#00008b"
                android:textColorHint="#808080"
                android:textSize="20sp"
                android:autofillHints=""
                 />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitPetition"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@color/black"
                android:text="@string/submit"
                android:textColor="?android:attr/colorPressedHighlight" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>